# cppcov-poc

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build-codecov.yml  build-sonarqube.yml  build.yml
include/: add.hpp  minus.hpp
src/: add.cc  main.cc  minus.cc
test/: add_minus_test.cc
workflows/: build.yml
